--- a/Config Downloader/Xml Loader.csproj
+++ b/Config Downloader/Xml Loader.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{87D3DC8C-813E-499D-9CDC-F943F715009D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Config_Downloader</RootNamespace>
-    <AssemblyName>Config Downloader</AssemblyName>
+    <RootNamespace>Xml_Loader</RootNamespace>
+    <AssemblyName>Xml Loader</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
